# easySign

./: .gitignore  README.md  pyproject.toml  requirements.txt
installer/: installer.iss
src/: config.json
src/cli/: sign.py
src/core/: converter.py  executor.py  signer.py
src/core/providers/: websign.py
src/gui/: app.py  client.py
src/resources/certs/: byte.pem
src/utils/: helpers.py
