[project]
name = "easySign"
version = "0.9.0"
description = "Easy e-Signature App"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Filippos Papadakakis", email = "philip.pap10@gmail.com"},
]
keywords = ["signature", "e-signature", "document", "signing"]
dependencies = [
    "pyhanko>=0.20.0",
    "pyhanko-certvalidator>=0.20.0",
    "requests>=2.31.0",
    "asn1crypto>=1.5.1",
    "keyring>=24.3.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/FilipposPapad/easySign"
Repository = "https://github.com/FilipposPapad/easySign.git"
Documentation = "https://github.com/FilipposPapad/easySign/wiki"
"Bug Tracker" = "https://github.com/FilipposPapad/easySign/issues"

[project.scripts]
easysign = "src.cli.sign:main"
easysign-gui = "src.gui.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=68.0", "wheel"]